@@ -1,5 +1,7 @@
 import org.w3c.dom.ls.LSOutput;
-
+import java.util.List;
+import java.util.ArrayList;
+import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -18,7 +20,8 @@ public class Parte2 {
         compras.add("Mantimento: Achocolatado");
 
         // Separando mantimentos
-        List<String>  mantimentos = compras.stream().filter(x -> x.substring(0, 10).equals("Mantimento")).collect(Collectors.toList());
+        List<String>  mantimentos = compras.stream().filter(x -> x.substring(0, 10).equals("Mantimento")).toList();
+        System.out.printf(mantimentos.toString());
         for (String itens : mantimentos) {
             System.out.println(itens);
         }
@@ -35,5 +38,13 @@ public class Parte2 {
         compras.add("Mantimento: Pão de alho");
         Collections.sort(compras);
         compras.forEach(item -> System.out.println(item));
+
+        /*
+            Testando a mutabilidade entre toList() e .collect(Collectors.toList())
+            List<Integer> inteiros = new ArrayList<>(List.of(1,2,3,4,5,6,7,8,9));
+            List<Integer> pares = inteiros.stream().filter(x -> x%2 == 0).collect(Collectors.toList());
+            pares.set(0, 5);
+            System.out.printf(pares.toString());
+         */
     }
 }
